--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<htlm>
+  <head> <a href="https://flatironschool.com/"> Flatiron School </a>
+  </head>
+</html>
