--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <htlm>
-  <head> <a href="https://flatironschool.com">Flatiron School</a>
+  <head>
+    <title>Sanfords</title>
+    <a href="https://flatironschool.com">Flatiron School</a>
   </head>
 </html>
