Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <htlm>
   <head>
-    <title>Sanfords</title>
+    <title>Coding School
+  </title>
     <a href="https://flatironschool.com">Flatiron School</a>
   </head>
 </html>
